--- a/todo.org
+++ b/todo.org
@@ -10,11 +10,15 @@
 - [ ] SI Unit system
 - [ ] Compute shaders.
 - [ ] Serde feature to make everything publicly facing serializable.
+- [ ] Transparency is fucked
+- [ ] Move draw param overrides to the material
+- [ ] https://github.com/sqrew/tunes
+- [ ] Dithering to reduce colour banding
 - [ ] Signed distance field / https://raytracing.github.io/books/RayTracingInOneWeekend.html
 - [X] Custom materials
 - [X] Custom programs
-- [-] Post processing [1/7]
-  - [X] Bloom
+- [ ] Post processing [0/7]
+  - [ ] Bloom
   - [ ] Pixelate
     - [ ] Would be nice if this actually made it render less pixels but we may
       just need to advise people to use the custom texture rendering method
@@ -24,7 +28,7 @@
   - [ ] Brightness
   - [ ] Vignette
   - [ ] Sharpen?
-- [ ] Circle outlines
+- [X] finish drawing circle outlines and add support for elipsis and arcs, this can all be one shader if you try hard enough.
 - [ ] Render to custom texture
   - [ ] Create new render pipeline
     - [ ] Should be refactored into it's own struct
@@ -33,6 +37,8 @@
   - [ ] Let you use the texture however, like render it to the screen or use it in
     a compute shader like for game of life.
     - [ ] Or render to a lower resolution texture and scale it up for a pixelated effect.
+- [ ] draw hexagon poly thing
+- [ ] arbritrary rotation and custom material for all 2d shapes
 - [ ] Animation support
   - [ ] Needs some sort of retained state.
   - [ ] Maybe generic over types that implement some trait.
@@ -40,12 +46,41 @@
   - [ ] Struct contains start, end, time, and interpolation function.
   - [ ] Interpolation function trait.
     - [ ] So you could have structs with configurable interpolation.
+- [ ] draw text
+  - [ ] draw_fps function
+- [ ] 2d mouse camera controller, like whats in the examples but built into the engine
 - [ ] Custom keybind/action map struct generic over action enum/struct
+- [ ] https://docs.rs/macroquad/latest/macroquad/experimental/animation/index.html
+- [ ] https://docs.rs/macroquad/latest/macroquad/experimental/collections/storage/index.html
+- [ ] automatic saving and loading support with efficient binary format
+- [ ] multiple cameras
+- [ ] Render pass
+  #+begin_src rust
+    pub struct RenderPass {
+        pub color_texture: Texture2D,
+        pub depth_texture: Option<Texture2D>,
+        pub(crate) render_pass: Arc<miniquad::RenderPass>,
+    }
+    #+end_src
+  - [ ] we need a function for creating an empty texure and one for creating a render pass from existing textures or just a resolution
+  - [ ] function to render a texture to the screen as a fullscreen quad
+  - [ ] just let the user create a render pipeline which has the various draw queues, and let the draw queues also contain their proj matrices so it can be drawn with just a reference to the engine state.
+  - [ ] let the engine use a default render pipeline, and have it be a vector of impl RenderPipelinePass which is implemented by draw_queue 2 and 3d and for drawing the UI in case the user wants to put things above that.
+  this should make it possible to add post processing effects easily
+- [ ] drawing curves
+  - [ ] lines that connect points
+  - [ ] bezier
+  - [ ] cubic
 - [ ] Documentation
+- [ ] function to get screen size, width, height
 - [ ] Fix backface culling
+- [ ] export all colours as normal consts
 - [ ] Transform example
+- [ ] change cursor icons
 - [ ] Reorganize everything
   - [ ] Especially draw_queue2d.rs and shapes2d.rs
+- [ ] test colours
+- [ ] test everything
 - [ ] 2D custom materials
 - [ ] Colors from hex code
 - [ ] Custom 3D material example
