texture atlas + images

--- a/todo.org
+++ b/todo.org
@@ -10,6 +10,7 @@
 - [ ] SI Unit system
 - [ ] clipping/masking
 - [ ] drop shadows 2d
+- [ ] Reduce build time
 - [ ] Unity particle system
 - [ ] Compute shaders.
 - [ ] use bump allocators for per-frame data that gets cleared
